# bitcoin-pool

./: CMakeLists.txt
cmake-bitcoinr/: CMakeLists.txt
src/: headers.h  util.h
src/gpucommon/: gpurunner.h
src/util/: run.sh
